--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   box-sizing: border-box;
 }
 body{
-  width: 100%;
+  width: 100vw;
   height: 100%;
   font-family: var(--text-font);
   background-color: var(--primary-color);
@@ -29,22 +29,23 @@ body{
   z-index: -1;
 }
 .flex__wrapper{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 70px;
-    border-bottom: var(--section-line);
-    padding: 120px 150px;
-    position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 70px;
+  border-bottom: var(--section-line);
+  padding: 120px 150px;
+  position: relative;
+  overflow-x: hidden;
 
 }
 .flex__wrapper p, .main_txt ul li h4, .timeline__parag, .partners-wrapper p{
-    font-family: var(--text-font);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 27px;
-    color: var(--white);    
+  font-family: var(--text-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 27px;
+  color: var(--white);    
 }
 .main_txt ul li h4{
   font-size: 16px;
